--- a/src/webui/_locales/hr/messages.json
+++ b/src/webui/_locales/hr/messages.json
@@ -12,7 +12,7 @@
         "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
     },
     "settings#egress-region#select-jp": {
-        "message": "Japan",
+        "message": "Japana",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Japan will be used."
     },
     "settings#upstream-proxy#error-modal-body-configured": {
@@ -32,7 +32,7 @@
         "description": "This alert is shown to the user if they enter incorrect values into one or more of the settings fields."
     },
     "settings#local-proxy-ports#reason": {
-        "message": "Ako koristite alate na svom računalu koji zahtjevaju ručno konfiguriranje kako bi radili sa Psiphon-om, želite da Psiphon konzistentno koristi iste brojeve lokalnih port-ova. Ako nema razloga specificirati brojeve port-ova, trebali bi dopustiti Psiphon-u da ih odabere automatski kako bi izbjegli konflikte.",
+        "message": "Ako koristite alate na svom računalu koji zahtjevaju ručno konfiguriranje kako bi radili sa Psiphonom, želite da Psiphon konzistentno koristi iste brojeve lokalnih portova. Ako nema razloga specificirati brojeve portova, trebali bi dopustiti Psiphonu da ih odabere automatski kako bi izbjegli konflikte.",
         "description": "Help text in the 'Local Proxy Ports' settings area. This explains to the user why they might want to override the default (automatic) settings values."
     },
     "appbackend#minimized-to-systray-body": {
@@ -47,12 +47,16 @@
         "message": "Istražite van svojih granica!",
         "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. This is intended to be a reference to the 'Psiphon: Beyond Borders' tag line. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
     },
+    "settings#egress-region#select-in": {
+        "message": "Indija",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in India will be used."
+    },
     "connection#connected-msg": {
         "message": "Psiphon je <span class=\"state-word\">spojen</span>",
         "description": "Message in the big connection status box telling the user that Psiphon is currently connected to the network."
     },
     "settings#split-tunnel#reason": {
-        "message": "Stranice unutar Vaše države u pravilu nisu blokirane, tako da će Vam omogućavanje ove opcije dati brži pristup tim stranicama i ponekad može smanjiti troškove prijenosa podataka.",
+        "message": "Stranice unutar Vaše države u pravilu nisu blokirane, tako da će Vam omogućavanje ove opcije dati brži pristup tim stranicama. Također, ova opcija ponekad može smanjiti troškove prijenosa podataka.",
         "description": "Help text in the 'Split Tunnel' settings section explaining to the user why they might want to modify (enable) the setting."
     },
     "nav#settings": {
@@ -68,11 +72,11 @@
         "description": "Title text of the error modal dialog shown when it is detected that the user has an invalid 'Psiphon Server Region' currently configured."
     },
     "settings#upstream-proxy#error-modal-title": {
-        "message": "Greška uzvodnog proxy-a",
+        "message": "Greška uzvodnog proxya",
         "description": "Title of the message box showing the error message when a problem is detected with the user's 'upstream proxy settings'."
     },
     "settings#egress-region#default": {
-        "message": "Odabirom zadane <strong>\"Najbrža država\"</strong> opcije dozvoljava Psiphon-u da se automatski spoji na poslužitelj, što će generalno rezultirati najboljom mrežnom povezanosti.",
+        "message": "Odabirom zadane <strong>\"Najbrža država\"</strong> opcije dozvoljavate Psiphonu da automatski odabere poslužitelj, što će generalno rezultirati najboljom mrežnom povezanosti.",
         "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the default (and best) option is."
     },
     "connection#stopping-msg": {
@@ -92,7 +96,7 @@
         "description": "Appears in the notification area balloon when Psiphon is disconnected (or has lost its connection, or has been disconnected)"
     },
     "settings#split-tunnel#help-text": {
-        "message": "Ako je ovo omogućeno, zahtjevi prema poslužiteljima unutar Vaše države neće biti tuneliran kroz Psiphon.",
+        "message": "Ako je ovo omogućeno, zahtjevi prema poslužiteljima unutar Vaše države neće biti tunelirani kroz Psiphon.",
         "description": "Text explaining to the user what the 'Split Tunnel' setting does if enabled."
     },
     "about#visit-download-site": {
@@ -103,8 +107,12 @@
         "message": "Ne koristi uzvodni proxy",
         "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
     },
+    "settings#egress-region#select-ca": {
+        "message": "Kanada",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the Canada will be used."
+    },
     "settings#systray-minimize#help-text": {
-        "message": "Ako je ovo omogućeno, kad smanjite Psiphon prozor aplikacije će se sakriti u područje obavijesti ( također poznato kao traka zadataka, smješteno blizu sata).",
+        "message": "Ako je ovo omogućeno, smanjivanjem prozora Psiphona, aplikacija će se sakriti u područje obavijesti (također poznato kao traka zadataka, smješteno blizu sata).",
         "description": "Text explaining to the user what the 'Minimize to Notification Area (System Tray)' setting does if enabled."
     },
     "settings#upstream-proxy#port-label": {
@@ -136,7 +144,7 @@
         "description": "Title of the modal dialog box that appears when the user has modified their changes, but has not applied the changes before trying to navigate to another tab. At that time the user is propmted with the choice to apply or discard the changes."
     },
     "settings#egress-region#select-us": {
-        "message": "Sjedinjene Američke Države",
+        "message": "Sjedinjenih Američkih Država",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the United States will be used."
     },
     "feedback#top_para_2": {
@@ -144,7 +152,7 @@
         "description": "Text telling the user that downloading a new version of Psiphon may be beneficial, and how to get a new version."
     },
     "notice#systemproxysettings-setproxy-error-body": {
-        "message": "<p>Psiphon nije uspio postaviti postavke proxy-a sustava.</p>\n<p>To bi moglo biti zbog konflikta s Vašim antivirusnim softare-om. Možda ćete morati ručno postaviti aplikaciju ili postavke proxy-a sustava da koriste lokalne Psiphon proxy-e.</p>",
+        "message": "<p>Psiphon nije uspio postaviti postavke proxya sustava.</p>\n<p>To bi moglo biti zbog konflikta s Vašim antivirusnim softare-om. Možda ćete morati ručno postaviti aplikaciju ili postavke proxya sustava da koriste lokalne Psiphon proxye.</p>",
         "description": "Body text of modal error message shown to user when Psiphon fails to set the user's system proxy settings. This means that Psiphon was able to connect, but was unable to configure the system to actually use Psiphon."
     },
     "settings#local-proxy-ports#error-modal-body-socks": {
@@ -156,7 +164,7 @@
         "description": "Submit button text. If the user clicks it, their feedback will be sent to Psiphon Inc."
     },
     "settings#systray-minimize#reason": {
-        "message": "Minimaliziranje Psiphon-a u obavijesni prostor (sistemska ploča) oslobađa prostor na Vašoj traci zadataka. Ovo je naročito korisno ako često koristite Psiphon u dužim periodima.",
+        "message": "Minimaliziranje Psiphona u obavijesni prostor (sistemska ploča) oslobađa prostor na Vašoj traci zadataka. Ovo je naročito korisno ako često koristite Psiphon u dužim periodima.",
         "description": "Help text in the 'Minimize to Systray' settings section explaining to the user why they might want to enable it."
     },
     "settings#unapplied-changes-prompt#discard-button": {
@@ -164,7 +172,7 @@
         "description": "Text on a button of the modal dialog box that appears when the user has modified their changes, but has not applied the changes before trying to navigate to another tab. At that time the user is propmted with the choice to apply or discard the changes. This button will discard the changes -- that is, throw away the changes to the settings the user has made since viewing the settings tab.  Should be read like the verb in 'Discard your changes'."
     },
     "notice#systemproxysettings-setproxy-error-title": {
-        "message": "Pogreška proxy-a sustava",
+        "message": "Pogreška proxya sustava",
         "description": "Title of modal error message shown to user when Psiphon fails to set the user's system proxy settings. This means that Psiphon was able to connect, but was unable to configure the system to actually use Psiphon."
     },
     "settings#egress-region#label": {
@@ -184,11 +192,11 @@
         "description": "Pop-up message shown to users after they have changed their settings (but they aren't currently connected, so there's no reconnect or further action)."
     },
     "about#get-by-email": {
-        "message": "<strong>Ako je stranica nedostupna</strong>, možete dobiti novu verziju Psiphon-a slanjem email-a na:",
+        "message": "<strong>Ako je stranica nedostupna</strong>, možete dobiti novu verziju Psiphona slanjem emaila na:",
         "description": "Paragraph on the 'About' page telling users that they can also get a new version of Psiphon via email. The text in this resource is then followed by an email address."
     },
     "settings#egress-region#select-nl": {
-        "message": "Nizozemska",
+        "message": "Nizozemske",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the Netherlands will be used."
     },
     "general#modal-close-button": {
@@ -248,11 +256,11 @@
         "description": "Settings section heading. In this section the user can specify what network ports the local Psiphon processes should use (Psiphon uses two such ports). For most people, this should be set to automatic."
     },
     "settings#egress-region#select-de": {
-        "message": "Njemačka",
+        "message": "Njemačke",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Germany will be used."
     },
     "notice#systemproxysettings-setproxy-warning-template": {
-        "message": "Psiphon nije uspio postaviti postavke proxy-a sustava za Internet vezu \"<%- data %>\". To bi moglo biti zbog konflikta s Vašim antivirusnim software-om. Možda ćete morati ručno postaviti aplikaciju ili postavke proxy-a sustava da koriste lokalne Psiphon proxy-e.",
+        "message": "Psiphon nije uspio postaviti postavke proxya sustava za Internet vezu \"<%- data %>\". To bi moglo biti zbog konflikta s Vašim antivirusnim softwareom. Možda ćete morati ručno postaviti aplikaciju ili postavke proxya sustava da koriste lokalne Psiphon proxye.",
         "description": "'<%- data %>' is a placeholder and must not be modified. Log message emitted when Psiphon can't fully configure the system to use Psiphon. It may or may not be a fatal state, and may or may not need human intervention."
     },
     "connection#stop-btn": {
@@ -268,11 +276,11 @@
         "description": "Message showing the user an email they can use to contact Psiphon Inc."
     },
     "settings#upstream-proxy#reason": {
-        "message": "Uzvodni proxy-i su nekad zahtjevani od strane škola, sveučilišta ili tvrtki. Ako znate postavke uzvodnog proxy-a zahtjevanog od strane Vašeg mrežnog davatelja, možda ćete ih morati ručno unijeti kako bi se spojili.",
+        "message": "Uzvodni proxyi su nekad zahtjevani od strane škola, sveučilišta ili tvrtki. Ako znate postavke uzvodnog proxya zahtjevanog od strane Vašeg mrežnog davatelja, možda ćete ih morati ručno unijeti kako bi se spojili.",
         "description": "Help text describing why the user might need to modify the upstream proxy settings in order to successfully connect to the Psiphon server."
     },
     "settings#local-proxy-ports#error-modal-title": {
-        "message": "Konflikt lokalnih proxy-a",
+        "message": "Konflikt lokalnih proxya",
         "description": "Title of the message box showing the error message when it is detected that the user has chosen a local proxy port (either HTTP or SOCKS) that is already in use and therefore can't be used by Psiphon."
     },
     "connection#disconnect-btn": {
@@ -284,7 +292,7 @@
         "description": "Title for the Feedback page"
     },
     "banner#long-connecting": {
-        "message": "<strong>O ne!</strong> Čini se da imate problema sa spajanjem!<br>\nPreuzmite najnoviju verziju Psiphon-a sa <a class=\"NewVersionURL\" href=\"#\">stranice za preuzimanje</a>\nili pošaljite email na <a class=\"NewVersionEmail\" href=\"#\"></a>",
+        "message": "<strong>O ne!</strong> Čini se da imate problema sa spajanjem!<br>\nPreuzmite najnoviju verziju Psiphona sa <a class=\"NewVersionURL\" href=\"#\">stranice za preuzimanje</a>\nili pošaljite email na <a class=\"NewVersionEmail\" href=\"#\"></a>",
         "description": "Message that appears when Psiphon is having trouble connecting. Often such connection problems can be fixed by downloading a new version."
     },
     "logs#placeholder": {
@@ -296,11 +304,11 @@
         "description": "Message in the big connection status box telling the user that Psiphon is currently not connected to the network."
     },
     "nav#about": {
-        "message": "O",
+        "message": "O Psiphonu",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'About' view. In that view the user can see info about the app, info about Psiphon Inc., and click links for more information."
     },
     "settings#local-proxy-ports#leave-blank": {
-        "message": "Ostavite <strong>prazno</strong> za automatski odabir port-a (preporučeno).",
+        "message": "Ostavite <strong>prazno</strong> za automatski odabir porta (preporučeno).",
         "description": "Help text that appears above the 'Local Proxy Ports' settings. 'blank' is the default and best value, and is bolded."
     },
     "settings#systray-minimize#heading": {
@@ -312,11 +320,11 @@
         "description": "A welcome message shown to the user when they first switch to the correct UI language"
     },
     "settings#egress-region#select-sg": {
-        "message": "Singapur",
+        "message": "Singapura",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Singapore will be used."
     },
     "feedback#diagnostic_check": {
-        "message": "Postavite dijagnostičke podatke. Ovi dijagnostički podatci Vas ne identificiraju, a nama će pomoći da održimo Psiphon-ov rad glatkim. <a class=\"DataCollectionInfoURL\" href=\"#\">Kliknite ovdje kako bi vidjeli koje podatke prikupljamo.</a>",
+        "message": "Postavite dijagnostičke podatke. Ovi dijagnostički podatci Vas ne identificiraju, a nama će pomoći da održimo Psiphonov rad glatkim. <a class=\"DataCollectionInfoURL\" href=\"#\">Kliknite ovdje kako bi vidjeli koje podatke prikupljamo.</a>",
         "description": "Checkbox text. If it is checked, diagnostic information about Psiphon's status will be sent along with the feedback to Psiphon Inc."
     },
     "settings#transport-mode#heading": {
@@ -356,7 +364,7 @@
         "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed."
     },
     "settings#upstream-proxy#proxy-reqs": {
-        "message": "Samo HTTP proxy-i koji podržavaju HTTPS su dopušteni.",
+        "message": "Samo HTTP proxyi koji podržavaju HTTPS su dopušteni.",
         "description": "Help text beside the upstream proxy settings indicating what type of upstream proxies can by used by Psiphon (different proxies are of different types and have different capabilities, and Psiphon has certain requirements)."
     },
     "settings#transport-mode#check-label": {
@@ -368,7 +376,7 @@
         "description": "The label for the 'Psiphon Server Region' combo box control located on the connection tab. It should be read like 'Connect via Great Britain' or 'Connect via Japan' or 'Connect via Fastest Server'."
     },
     "settings#egress-region#select-gb": {
-        "message": "Ujedinjeno Kraljevstvo",
+        "message": "Ujedinjenog Kraljevstva",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the UK will be used."
     },
     "about#wordart-title": {
@@ -400,7 +408,7 @@
         "description": "Help text indicating the default (and best) configuration and behavior for the 'Upstream Proxy' setting. It also indicates what will happen if the setting is overridden or disabled."
     },
     "settings#split-tunnel#enable-label": {
-        "message": "Ne proxy-aj stranice unutar države",
+        "message": "Ne proxyaj stranice unutar države",
         "description": "The label on the checkbox that enables 'Split Tunnel'."
     },
     "nav#connection#starting": {
@@ -432,7 +440,7 @@
         "description": "Help text for the 'Use L2TP/IPSec mode' transport selection checkbox. It gives some technical details and indicates that this mode is not recommended."
     },
     "settings#egress-region#select-best-performance": {
-        "message": "Najbrža država",
+        "message": "Najbrže države",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. This is the default option and indicates that Psiphon will use a server in the best/fastest region."
     },
     "connection#connect-btn": {
