--- a/src/webui/_locales/pt_BR/messages.json
+++ b/src/webui/_locales/pt_BR/messages.json
@@ -47,6 +47,10 @@
         "message": "Explore além de suas fronteiras!",
         "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. This is intended to be a reference to the 'Psiphon: Beyond Borders' tag line. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
     },
+    "settings#egress-region#select-in": {
+        "message": "India",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in India will be used."
+    },
     "connection#connected-msg": {
         "message": "Psiphon está <span class=\"state-word\">conectado</span>",
         "description": "Message in the big connection status box telling the user that Psiphon is currently connected to the network."
@@ -102,6 +106,10 @@
     "settings#upstream-proxy#skip-label": {
         "message": "Não usar servidor proxy",
         "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
+    },
+    "settings#egress-region#select-ca": {
+        "message": "Canada",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the Canada will be used."
     },
     "settings#systray-minimize#help-text": {
         "message": "Se habilitado, quando o Psiphon for minimizado, a janela do aplicativo irá esconder na área de notificação (também conhecido como a \"bandeja do sistema\" ou \"systray\", localizado perto do relógio em sua barra de tarefas do Windows).",
