--- a/src/webui/_locales/zh/messages.json
+++ b/src/webui/_locales/zh/messages.json
@@ -28,7 +28,7 @@
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Logs' view. In that view the user can see the status messages that Psiphon produces as it connects, disconnects, etc."
     },
     "settings#error-alert": {
-        "message": "<strong>错误！</strong>请在继续前修正错误设置值。",
+        "message": "<strong>出错了！</strong>请在继续前修正错误设置值。",
         "description": "This alert is shown to the user if they enter incorrect values into one or more of the settings fields."
     },
     "settings#local-proxy-ports#reason": {
@@ -47,8 +47,12 @@
         "message": "探索边界外面的世界！",
         "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. This is intended to be a reference to the 'Psiphon: Beyond Borders' tag line. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
     },
+    "settings#egress-region#select-in": {
+        "message": "印度",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in India will be used."
+    },
     "connection#connected-msg": {
-        "message": "赛风 <span class=\"state-word\">已连接</span>",
+        "message": "赛风<span class=\"state-word\">已连接</span>",
         "description": "Message in the big connection status box telling the user that Psiphon is currently connected to the network."
     },
     "settings#split-tunnel#reason": {
@@ -72,11 +76,11 @@
         "description": "Title of the message box showing the error message when a problem is detected with the user's 'upstream proxy settings'."
     },
     "settings#egress-region#default": {
-        "message": "选择默认的<strong>“最快的国家”</strong>选项以允许赛风自动选择服务器，通常会得到最好的网络连接质量。",
+        "message": "选择默认的<strong>“最快的国家”</strong>选项以允许赛风自动选择服务器，通常能得到最佳的网络连接质量。",
         "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the default (and best) option is."
     },
     "connection#stopping-msg": {
-        "message": "赛风 <span class=\"state-word\">断开连接中</span>…",
+        "message": "赛风<span class=\"state-word\">断开连接中</span>…",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to disconnect from the network."
     },
     "settings#upstream-proxy#error-modal-body-default": {
@@ -96,15 +100,19 @@
         "description": "Text explaining to the user what the 'Split Tunnel' setting does if enabled."
     },
     "about#visit-download-site": {
-        "message": "请访问网站<strong><a class=\"NewVersionURL\" href=\"#\">下载最新版本</a></strong>或者<strong><a class=\"InfoURL\" href=\"#\">获取帮助和相关信息</a></strong>。Psiphon 在 Android 和 Windows 平台上可用。",
+        "message": "请访问网站以<strong><a class=\"NewVersionURL\" href=\"#\">下载最新版本</a></strong>或者<strong><a class=\"InfoURL\" href=\"#\">获取帮助与相关信息</a></strong>。赛风在 Android 和 Windows 平台上可用。",
         "description": "Paragraph on the 'About' page telling users what web page to go to get a new version of Psiphon or more info about it."
     },
     "settings#upstream-proxy#skip-label": {
         "message": "不使用上层代理",
         "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
     },
+    "settings#egress-region#select-ca": {
+        "message": "加拿大",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in the Canada will be used."
+    },
     "settings#systray-minimize#help-text": {
-        "message": "如果启用，在最小化赛风应用程序的窗口时，将会将其隐藏到通知区域（也称“系统托盘”，位于您的 Windows 任务栏的时钟区域旁边）。",
+        "message": "如果启用，在最小化赛风应用程序窗口时，其将会隐藏到通知区域（也称“系统托盘”，位于 Windows 任务栏的时钟区域旁）。",
         "description": "Text explaining to the user what the 'Minimize to Notification Area (System Tray)' setting does if enabled."
     },
     "settings#upstream-proxy#port-label": {
@@ -120,7 +128,7 @@
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Feeback' view. In that view the user can send feedback about their experience to Psiphon."
     },
     "connection#starting-msg": {
-        "message": "赛风 <span class=\"state-word\">正在连接</span>…",
+        "message": "赛风<span class=\"state-word\">连接中</span>…",
         "description": "Message in the big connection status box telling the user that Psiphon is currently trying to connect to the network."
     },
     "settings#applying-message": {
@@ -184,7 +192,7 @@
         "description": "Pop-up message shown to users after they have changed their settings (but they aren't currently connected, so there's no reconnect or further action)."
     },
     "about#get-by-email": {
-        "message": "<strong>如果网站无法访问</strong>，您可以发送邮件至如下地址以获取新版本的赛风：",
+        "message": "<strong>若网站无法访问</strong>，您可以发送邮件至如下地址以获取新版本的赛风：",
         "description": "Paragraph on the 'About' page telling users that they can also get a new version of Psiphon via email. The text in this resource is then followed by an email address."
     },
     "settings#egress-region#select-nl": {
@@ -216,7 +224,7 @@
         "description": "Settings section heading. In this section the user can specify network information to use an 'upstream proxy', which is a separate proxy that Psiphon will connect through to get to its own server. This is most often used by people in school or work networks that force them to connect out to the Internet through a particular server. This setting can also disable automatic upstream proxy use."
     },
     "settings#egress-region#description": {
-        "message": "赛风在多个国家部署了服务器。使用靠近您所在国家的赛风服务器通常可以获得更好的网络质量，而您也可能希望使用一个特定国家的服务器来访问网站和服务。",
+        "message": "赛风在多个国家部署了服务器。使用靠近您所在国家的赛风服务器通常网络质量更佳，而您也可能希望访问网站和服务一如您就在某个特定的国家一样。",
         "description": "Help text in the 'Psiphon Server Region' settings section explaining what the option is and why the user may want to override the default ('best') setting value."
     },
     "settings#vpn-incompatible-msg": {
@@ -292,7 +300,7 @@
         "description": "Placeholder text shown when there are not yet any log messages to show. This message is removed when the first log message is added."
     },
     "connection#stopped-msg": {
-        "message": "赛风 <span class=\"state-word\">连接已中断</span>",
+        "message": "赛风<span class=\"state-word\">连接已中断</span>",
         "description": "Message in the big connection status box telling the user that Psiphon is currently not connected to the network."
     },
     "nav#about": {
@@ -396,7 +404,7 @@
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
     },
     "settings#upstream-proxy#by-default": {
-        "message": "如果您的电脑已经配置了代理，默认情况下赛风将在建立隧道时使用该代理。您可以指定要使用的代理或者要求不使用“上层代理”来更改默认行为。",
+        "message": "如果您的电脑已经配置了代理，默认情况下赛风将在建立隧道时使用该代理。您可以变更此行为，指定要使用的代理，或者要求不使用此类“上层代理”。",
         "description": "Help text indicating the default (and best) configuration and behavior for the 'Upstream Proxy' setting. It also indicates what will happen if the setting is overridden or disabled."
     },
     "settings#split-tunnel#enable-label": {
@@ -412,7 +420,7 @@
         "description": "Label for a text field where the user can provide an email address to Psiphon Inc. along with their feedback."
     },
     "feedback#text_feedback_prompt": {
-        "message": "请在这里输入您的意见：",
+        "message": "请在此输入您的评论：",
         "description": "Label for a text box where the user can provide a feedback message to Psiphon Inc."
     },
     "feedback#smiley_happy": {
