--- a/src/webui/_locales/devltr/messages.json
+++ b/src/webui/_locales/devltr/messages.json
@@ -211,6 +211,22 @@
     "message": "[Řḗḗƈǿǿƞƞḗḗƈŧīīƞɠ ŧǿǿ ȧȧƥƥŀẏ ẏǿǿŭŭř şḗḗŧŧīīƞɠş.]",
     "description": "Pop-up message shown to users after they have changed their settings and a reconnection is happening to apply the new settings."
   },
+  "settings#disable-timeouts#enable-label": {
+    "message": "[Ḓīīşȧȧƀŀḗḗ ŧīīḿḗḗǿǿŭŭŧş ƒǿǿř şŀǿǿẇ ƞḗḗŧẇǿǿřķş]",
+    "description": "The label on the checkbox that enables 'Disable Timeouts' mode."
+  },
+  "settings#disable-timeouts#heading": {
+    "message": "[Ḓīīşȧȧƀŀḗḗ Ŧīīḿḗḗǿǿŭŭŧş ƒǿǿř Şŀǿǿẇ Ƞḗḗŧẇǿǿřķş]",
+    "description": "Settings section heading. If the user clicks this, the 'Disable Timeouts for Slow Networks' section will expand and can be edited. If 'disable timeouts' is enabled, psiphon will disable all network based timeouts, allowing very slow requests to eventually complete."
+  },
+  "settings#disable-timeouts#help-text": {
+    "message": "[Īīƒ ḗḗƞȧȧƀŀḗḗḓ, řḗḗɋŭŭḗḗşŧş ḿȧȧḓḗḗ ṽīīȧȧ Ƥşīīƥħǿǿƞ ẇīīŀŀ ƞḗḗṽḗḗř ŧīīḿḗḗǿǿŭŭŧ]",
+    "description": "Text explaining to the user what the 'Disable Timeouts' setting does if enabled."
+  },
+  "settings#disable-timeouts#reason": {
+    "message": "[Ḗḗƞȧȧƀŀīīƞɠ ŧħīīş ḿḗḗȧȧƞş ŧħȧȧŧ ǿǿṽḗḗř ṽḗḗřẏ şŀǿǿẇ ƞḗḗŧẇǿǿřķ ƈǿǿƞƞḗḗƈŧīīǿǿƞş, ẏǿǿŭŭ ȧȧřḗḗ ḿǿǿřḗḗ ŀīīķḗḗŀẏ ŧǿǿ ħȧȧṽḗḗ ẏǿǿŭŭř řḗḗɋŭŭḗḗşŧ şŭŭƈƈḗḗḗḗḓ.]",
+    "description": "Help text in the 'Disable Timeouts' settings section explaining to the user why they might want to modify (enable) the setting."
+  },
   "settings#egress-region#default": {
     "message": "[Ƈħǿǿǿǿşīīƞɠ ŧħḗḗ ḓḗḗƒȧȧŭŭŀŧ <strong>“Ƒȧȧşŧḗḗşŧ Ƈǿǿŭŭƞŧřẏ”</strong> ǿǿƥŧīīǿǿƞ ȧȧŀŀǿǿẇş Ƥşīīƥħǿǿƞ ŧǿǿ ȧȧŭŭŧǿǿḿȧȧŧīīƈȧȧŀŀẏ ƈħǿǿǿǿşḗḗ ȧȧ şḗḗřṽḗḗř, ẇħīīƈħ ẇīīŀŀ ɠḗḗƞḗḗřȧȧŀŀẏ řḗḗşŭŭŀŧ īīƞ ŧħḗḗ ƀḗḗşŧ ƞḗḗŧẇǿǿřķ ƈǿǿƞƞḗḗƈŧīīǿǿƞ.]",
     "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the default (and best) option is."
@@ -419,6 +435,10 @@
     "message": "[Ħǿǿşŧƞȧȧḿḗḗ]",
     "description": "Label for the text box where the user can set the hostname for the 'upstream proxy'. 'Hostname' means approximately the same thing as 'server network name or identifier'."
   },
+  "settings#upstream-proxy#password-label": {
+    "message": "[Ƥȧȧşşẇǿǿřḓ]",
+    "description": "Label for the text box where the user can set the password for the 'upstream proxy'."
+  },
   "settings#upstream-proxy#port-label": {
     "message": "[Ƥǿǿřŧ]",
     "description": "Label for the text box where the user can set the network port number for the 'upstream proxy' that they would like to use."
@@ -431,13 +451,21 @@
     "message": "[Ŭŭƥşŧřḗḗȧȧḿ ƥřǿǿẋīīḗḗş ȧȧřḗḗ şǿǿḿḗḗŧīīḿḗḗş řḗḗɋŭŭīīřḗḗḓ ƀẏ şƈħǿǿǿǿŀş, ŭŭƞīīṽḗḗřşīīŧīīḗḗş, ǿǿř ƀŭŭşīīƞḗḗşşḗḗş. Īīƒ ẏǿǿŭŭř ƞḗḗŧẇǿǿřķ ƥřǿǿṽīīḓḗḗř ħȧȧş ɠīīṽḗḗƞ ẏǿǿŭŭ ŭŭƥşŧřḗḗȧȧḿ ƥřǿǿẋẏ şḗḗŧŧīīƞɠş, ŧħḗḗƞ ḿȧȧƞŭŭȧȧŀŀẏ şḗḗŧŧīīƞɠ ŧħḗḗḿ ħḗḗřḗḗ ḿȧȧẏ ƀḗḗ řḗḗɋŭŭīīřḗḗḓ ŧǿǿ ƈǿǿƞƞḗḗƈŧ.]",
     "description": "Help text describing why the user might need to modify the upstream proxy settings in order to successfully connect to the Psiphon server."
   },
-  "settings#upstream-proxy#set-both-error-msg": {
+  "settings#upstream-proxy#set-hostname-port-error-msg": {
     "message": "[Ẏǿǿŭŭ ḿŭŭşŧ şḗḗŧ ƀǿǿŧħ Ħǿǿşŧƞȧȧḿḗḗ ȧȧƞḓ Ƥǿǿřŧ, ǿǿř ŀḗḗȧȧṽḗḗ ƀǿǿŧħ ƀŀȧȧƞķ ƒǿǿř ȧȧŭŭŧǿǿḿȧȧŧīīƈ şḗḗŀḗḗƈŧīīǿǿƞ.]",
     "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
+  },
+  "settings#upstream-proxy#set-username-password-error-msg": {
+    "message": "[Ẏǿǿŭŭ ḿŭŭşŧ şḗḗŧ ƀǿǿŧħ Ħǿǿşŧƞȧȧḿḗḗ ȧȧƞḓ Ƥǿǿřŧ, ǿǿř ŀḗḗȧȧṽḗḗ ƀǿǿŧħ ƀŀȧȧƞķ ƒǿǿř ȧȧŭŭŧǿǿḿȧȧŧīīƈ şḗḗŀḗḗƈŧīīǿǿƞ.]",
+    "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
   },
   "settings#upstream-proxy#skip-label": {
     "message": "[Ḓǿǿƞ'ŧ ŭŭşḗḗ ŭŭƥşŧřḗḗȧȧḿ ƥřǿǿẋẏ]",
     "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
+  },
+  "settings#upstream-proxy#username-label": {
+    "message": "[Ŭŭşḗḗřƞȧȧḿḗḗ]",
+    "description": "Label for the text box where the user can set the username for the 'upstream proxy'."
   },
   "settings#vpn-incompatible-label": {
     "message": "[Ŀ2ŦƤ/ĪīƤŞḗḗƈ]",
