--- a/src/webui/_locales/devrtl/messages.json
+++ b/src/webui/_locales/devrtl/messages.json
@@ -211,6 +211,22 @@
     "message": "‮ᴚǝɔouuǝɔʇıuƃ‬ ‮ʇo‬ ‮ɐddʅʎ‬ ‮ʎonɹ‬ ‮sǝʇʇıuƃs‬.",
     "description": "Pop-up message shown to users after they have changed their settings and a reconnection is happening to apply the new settings."
   },
+  "settings#disable-timeouts#enable-label": {
+    "message": "‮pısɐqʅǝ‬ ‮ʇıɯǝonʇs‬ ‮ɟoɹ‬ ‮sʅoʍ‬ ‮uǝʇʍoɹʞs‬",
+    "description": "The label on the checkbox that enables 'Disable Timeouts' mode."
+  },
+  "settings#disable-timeouts#heading": {
+    "message": "‮pısɐqʅǝ‬ ‮⊥ıɯǝonʇs‬ ‮ɟoɹ‬ ‮Sʅoʍ‬ ‮Nǝʇʍoɹʞs‬",
+    "description": "Settings section heading. If the user clicks this, the 'Disable Timeouts for Slow Networks' section will expand and can be edited. If 'disable timeouts' is enabled, psiphon will disable all network based timeouts, allowing very slow requests to eventually complete."
+  },
+  "settings#disable-timeouts#help-text": {
+    "message": "‮Iɟ‬ ‮ǝuɐqʅǝp‬, ‮ɹǝbnǝsʇs‬ ‮ɯɐpǝ‬ ‮ʌıɐ‬ ‮Ԁsıdɥou‬ ‮ʍıʅʅ‬ ‮uǝʌǝɹ‬ ‮ʇıɯǝonʇ‬",
+    "description": "Text explaining to the user what the 'Disable Timeouts' setting does if enabled."
+  },
+  "settings#disable-timeouts#reason": {
+    "message": "‮Ǝuɐqʅıuƃ‬ ‮ʇɥıs‬ ‮ɯǝɐus‬ ‮ʇɥɐʇ‬ ‮oʌǝɹ‬ ‮ʌǝɹʎ‬ ‮sʅoʍ‬ ‮uǝʇʍoɹʞ‬ ‮ɔouuǝɔʇıous‬, ‮ʎon‬ ‮ɐɹǝ‬ ‮ɯoɹǝ‬ ‮ʅıʞǝʅʎ‬ ‮ʇo‬ ‮ɥɐʌǝ‬ ‮ʎonɹ‬ ‮ɹǝbnǝsʇ‬ ‮snɔɔǝǝp‬.",
+    "description": "Help text in the 'Disable Timeouts' settings section explaining to the user why they might want to modify (enable) the setting."
+  },
   "settings#egress-region#default": {
     "message": "‮Ↄɥoosıuƃ‬ ‮ʇɥǝ‬ ‮pǝɟɐnʅʇ‬ <strong>“‮ɟɐsʇǝsʇ‬ ‮Ↄonuʇɹʎ‬”</strong> ‮odʇıou‬ ‮ɐʅʅoʍs‬ ‮Ԁsıdɥou‬ ‮ʇo‬ ‮ɐnʇoɯɐʇıɔɐʅʅʎ‬ ‮ɔɥoosǝ‬ ‮ɐ‬ ‮sǝɹʌǝɹ‬, ‮ʍɥıɔɥ‬ ‮ʍıʅʅ‬ ‮ƃǝuǝɹɐʅʅʎ‬ ‮ɹǝsnʅʇ‬ ‮ıu‬ ‮ʇɥǝ‬ ‮qǝsʇ‬ ‮uǝʇʍoɹʞ‬ ‮ɔouuǝɔʇıou‬.",
     "description": "Help text below the 'Psiphon Server Region' combo box. It explains to the user what the default (and best) option is."
@@ -419,6 +435,10 @@
     "message": "‮Hosʇuɐɯǝ‬",
     "description": "Label for the text box where the user can set the hostname for the 'upstream proxy'. 'Hostname' means approximately the same thing as 'server network name or identifier'."
   },
+  "settings#upstream-proxy#password-label": {
+    "message": "‮Ԁɐssʍoɹp‬",
+    "description": "Label for the text box where the user can set the password for the 'upstream proxy'."
+  },
   "settings#upstream-proxy#port-label": {
     "message": "‮Ԁoɹʇ‬",
     "description": "Label for the text box where the user can set the network port number for the 'upstream proxy' that they would like to use."
@@ -431,13 +451,21 @@
     "message": "‮∩dsʇɹǝɐɯ‬ ‮dɹoxıǝs‬ ‮ɐɹǝ‬ ‮soɯǝʇıɯǝs‬ ‮ɹǝbnıɹǝp‬ ‮qʎ‬ ‮sɔɥooʅs‬, ‮nuıʌǝɹsıʇıǝs‬, ‮oɹ‬ ‮qnsıuǝssǝs‬. ‮Iɟ‬ ‮ʎonɹ‬ ‮uǝʇʍoɹʞ‬ ‮dɹoʌıpǝɹ‬ ‮ɥɐs‬ ‮ƃıʌǝu‬ ‮ʎon‬ ‮ndsʇɹǝɐɯ‬ ‮dɹoxʎ‬ ‮sǝʇʇıuƃs‬, ‮ʇɥǝu‬ ‮ɯɐunɐʅʅʎ‬ ‮sǝʇʇıuƃ‬ ‮ʇɥǝɯ‬ ‮ɥǝɹǝ‬ ‮ɯɐʎ‬ ‮qǝ‬ ‮ɹǝbnıɹǝp‬ ‮ʇo‬ ‮ɔouuǝɔʇ‬.",
     "description": "Help text describing why the user might need to modify the upstream proxy settings in order to successfully connect to the Psiphon server."
   },
-  "settings#upstream-proxy#set-both-error-msg": {
+  "settings#upstream-proxy#set-hostname-port-error-msg": {
     "message": "‮ʎon‬ ‮ɯnsʇ‬ ‮sǝʇ‬ ‮qoʇɥ‬ ‮Hosʇuɐɯǝ‬ ‮ɐup‬ ‮Ԁoɹʇ‬, ‮oɹ‬ ‮ʅǝɐʌǝ‬ ‮qoʇɥ‬ ‮qʅɐuʞ‬ ‮ɟoɹ‬ ‮ɐnʇoɯɐʇıɔ‬ ‮sǝʅǝɔʇıou‬.",
     "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
+  },
+  "settings#upstream-proxy#set-username-password-error-msg": {
+    "message": "‮ʎon‬ ‮ɯnsʇ‬ ‮sǝʇ‬ ‮qoʇɥ‬ ‮Hosʇuɐɯǝ‬ ‮ɐup‬ ‮Ԁoɹʇ‬, ‮oɹ‬ ‮ʅǝɐʌǝ‬ ‮qoʇɥ‬ ‮qʅɐuʞ‬ ‮ɟoɹ‬ ‮ɐnʇoɯɐʇıɔ‬ ‮sǝʅǝɔʇıou‬.",
+    "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
   },
   "settings#upstream-proxy#skip-label": {
     "message": "‮pou‬'‮ʇ‬ ‮nsǝ‬ ‮ndsʇɹǝɐɯ‬ ‮dɹoxʎ‬",
     "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
+  },
+  "settings#upstream-proxy#username-label": {
+    "message": "‮∩sǝɹuɐɯǝ‬",
+    "description": "Label for the text box where the user can set the username for the 'upstream proxy'."
   },
   "settings#vpn-incompatible-label": {
     "message": "‮˥‬2‮⊥Ԁ‬/‮IԀSǝɔ‬",
