--- a/src/webui/_locales/devrtl/messages.json
+++ b/src/webui/_locales/devrtl/messages.json
@@ -220,7 +220,7 @@
     "description": "Settings section heading. If the user clicks this, the 'Disable Timeouts for Slow Networks' section will expand and can be edited. If 'disable timeouts' is enabled, network timeouts between the Psiphon client and server will be disabled."
   },
   "settings#disable-timeouts#help-text": {
-    "message": "‮Iɟ‬ ‮ǝuɐqʅǝp‬, ‮ɔoɯɯnuıɔɐʇıou‬ ‮ʍıʇɥ‬ ‮ʇɥǝ‬ ‮Ԁsıdɥou‬ ‮sǝɹʌǝɹ‬ ‮ʍıʅʅ‬ ‮uoʇ‬ ‮ʇıɯǝ‬ ‮onʇ‬",
+    "message": "‮Iɟ‬ ‮ǝuɐqʅǝp‬, ‮ɔoɯɯnuıɔɐʇıou‬ ‮ʍıʇɥ‬ ‮ʇɥǝ‬ ‮Ԁsıdɥou‬ ‮sǝɹʌǝɹ‬ ‮ʍıʅʅ‬ ‮uoʇ‬ ‮ʇıɯǝ‬ ‮onʇ‬.",
     "description": "Text explaining to the user what the 'Disable Timeouts' setting does if enabled."
   },
   "settings#disable-timeouts#reason": {
@@ -419,6 +419,10 @@
     "message": "‮Iɟ‬ ‮ʎonɹ‬ ‮ɔoɯdnʇǝɹ‬ ‮ɐʅɹǝɐpʎ‬ ‮ɥɐs‬ ‮ɐ‬ ‮dɹoxʎ‬ ‮ɔouɟıƃnɹǝp‬, ‮qʎ‬ ‮pǝɟɐnʅʇ‬ ‮Ԁsıdɥou‬ ‮ʍıʅʅ‬ ‮nsǝ‬ ‮ʇɥɐʇ‬ ‮dɹoxʎ‬ ‮ʍɥǝu‬ ‮ǝsʇɐqʅısɥıuƃ‬ ‮ɐ‬ ‮ʇnuuǝʅ‬. ‮ʎon‬ ‮ɔɐu‬ ‮oʌǝɹɹıpǝ‬ ‮ʇɥɐʇ‬ ‮qǝɥɐʌıoɹ‬ ‮qʎ‬ ‮sdǝɔıɟʎıuƃ‬ ‮ɐ‬ ‮dɹoxʎ‬ ‮ʇo‬ ‮nsǝ‬, ‮oɹ‬ ‮qʎ‬ ‮sdǝɔıɟʎıuƃ‬ ‮ʇɥɐʇ‬ ‮uo‬ ‮snɔɥ‬ “‮ndsʇɹǝɐɯ‬ ‮dɹoxʎ‬” ‮sɥonʅp‬ ‮qǝ‬ ‮nsǝp‬.",
     "description": "Help text indicating the default (and best) configuration and behavior for the 'Upstream Proxy' setting. It also indicates what will happen if the setting is overridden or disabled."
   },
+  "settings#upstream-proxy#domain-label": {
+    "message": "‮poɯɐıu‬",
+    "description": "Label for the text box where the user can set the domain for the 'upstream proxy'."
+  },
   "settings#upstream-proxy#error-modal-body-configured": {
     "message": "‮ʎon‬ ‮ɥɐʌǝ‬ ‮ɔouɟıƃnɹǝp‬ ‮Ԁsıdɥou‬ ‮ʇo‬ ‮nsǝ‬ ‮ɐu‬ “‮ndsʇɹǝɐɯ‬ ‮dɹoxʎ‬”.<br>\n‮Hoʍǝʌǝɹ‬, ‮ʍǝ‬ ‮sǝǝɯ‬ ‮ʇo‬ ‮qǝ‬ ‮nuɐqʅǝ‬ ‮ʇo‬ ‮ɔouuǝɔʇ‬ ‮ʇo‬ ‮ɐ‬ ‮Ԁsıdɥou‬ ‮sǝɹʌǝɹ‬ ‮ʇɥɹonƃɥ‬ ‮ʇɥɐʇ‬ ‮dɹoxʎ‬.<br>\n‮Ԁʅǝɐsǝ‬ ‮ɟıx‬ ‮ʇɥǝ‬ ‮sǝʇʇıuƃs‬ ‮ɐup‬ ‮ʇɹʎ‬ ‮ɐƃɐıu‬.",
     "description": "Main text in the 'Upstream Proxy Error' dialog box. This is shown when the user has directly altered these settings, and those settings are (probably) erroneous."
@@ -455,12 +459,20 @@
     "message": "‮∩dsʇɹǝɐɯ‬ ‮dɹoxıǝs‬ ‮ɐɹǝ‬ ‮soɯǝʇıɯǝs‬ ‮ɹǝbnıɹǝp‬ ‮qʎ‬ ‮sɔɥooʅs‬, ‮nuıʌǝɹsıʇıǝs‬, ‮oɹ‬ ‮qnsıuǝssǝs‬. ‮Iɟ‬ ‮ʎonɹ‬ ‮uǝʇʍoɹʞ‬ ‮dɹoʌıpǝɹ‬ ‮ɥɐs‬ ‮ƃıʌǝu‬ ‮ʎon‬ ‮ndsʇɹǝɐɯ‬ ‮dɹoxʎ‬ ‮sǝʇʇıuƃs‬, ‮ʇɥǝu‬ ‮ɯɐunɐʅʅʎ‬ ‮sǝʇʇıuƃ‬ ‮ʇɥǝɯ‬ ‮ɥǝɹǝ‬ ‮ɯɐʎ‬ ‮qǝ‬ ‮ɹǝbnıɹǝp‬ ‮ʇo‬ ‮ɔouuǝɔʇ‬.",
     "description": "Help text describing why the user might need to modify the upstream proxy settings in order to successfully connect to the Psiphon server."
   },
+  "settings#upstream-proxy#set-domain-without-authentication-error-msg": {
+    "message": "‮Sǝʇʇıuƃ‬ ‮ɐ‬ ‮poɯɐıu‬ ‮ɹǝbnıɹǝs‬ ‮sǝʇʇıuƃ‬ ‮ɐ‬ ‮∩sǝɹuɐɯǝ‬ ‮ɐup‬ ‮Ԁɐssʍoɹp‬",
+    "description": "Error message that is shown if the user enters a value for 'Domain', but not 'Username' and 'Password' -- this is not valid, as domain authentication requires a Username and Password. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
+  },
   "settings#upstream-proxy#set-hostname-port-error-msg": {
     "message": "‮ʎon‬ ‮ɯnsʇ‬ ‮sǝʇ‬ ‮qoʇɥ‬ ‮Hosʇuɐɯǝ‬ ‮ɐup‬ ‮Ԁoɹʇ‬, ‮oɹ‬ ‮ʅǝɐʌǝ‬ ‮qoʇɥ‬ ‮qʅɐuʞ‬ ‮ɟoɹ‬ ‮ɐnʇoɯɐʇıɔ‬ ‮sǝʅǝɔʇıou‬.",
     "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
   },
+  "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
+    "message": "‮Sǝʇʇıuƃ‬ ‮ɐ‬ ‮∩sǝɹuɐɯǝ‬ ‮ɐup‬ ‮Ԁɐssʍoɹp‬ ‮ɐʅso‬ ‮ɹǝbnıɹǝs‬ ‮sǝʇʇıuƃ‬ ‮ɐ‬ ‮Hosʇuɐɯǝ‬ ‮ɐup‬ ‮Ԁoɹʇ‬",
+    "description": "Error message that is shown if the user enters a value for 'Username' and 'Password' but doesn't set a 'Hostname' and 'Port' -- this is not valid, as both are required. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
+  },
   "settings#upstream-proxy#set-username-password-error-msg": {
-    "message": "‮ʎon‬ ‮ɯnsʇ‬ ‮sǝʇ‬ ‮qoʇɥ‬ ‮∩sǝɹuɐɯǝ‬ ‮ɐup‬ ‮Ԁɐssʍoɹp‬, ‮oɹ‬ ‮ʅǝɐʌǝ‬ ‮qoʇɥ‬ ‮qʅɐuʞ‬ ‮ɟoɹ‬ ‮dɹoxıǝs‬ ‮ʍɥıɔɥ‬ ‮po‬ ‮uoʇ‬ ‮ɹǝbnıɹǝ‬ ‮ɐnʇɥǝuʇıɔɐʇıou‬.",
+    "message": "‮ʎon‬ ‮ɯnsʇ‬ ‮sǝʇ‬ ‮qoʇɥ‬ ‮∩sǝɹuɐɯǝ‬ ‮ɐup‬ ‮Ԁɐssʍoɹp‬, ‮oɹ‬ ‮ʅǝɐʌǝ‬ ‮qoʇɥ‬ ‮qʅɐuʞ‬ ‮ɟoɹ‬ ‮uo‬ ‮ɐnʇɥǝuʇıɔɐʇıou‬.",
     "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
   },
   "settings#upstream-proxy#skip-label": {
