--- a/src/webui/_locales/en/messages.json
+++ b/src/webui/_locales/en/messages.json
@@ -132,7 +132,7 @@
     "description": "Settings section heading. If the user clicks this, the 'Disable Timeouts for Slow Networks' section will expand and can be edited. If 'disable timeouts' is enabled, network timeouts between the Psiphon client and server will be disabled."
   },
   "settings#disable-timeouts#help-text": {
-    "message": "If enabled, communication with the Psiphon server will not time out",
+    "message": "If enabled, communication with the Psiphon server will not time out.",
     "description": "Text explaining to the user what the 'Disable Timeouts' setting does if enabled."
   },
   "settings#disable-timeouts#reason": {
@@ -267,14 +267,6 @@
     "message": "Only HTTP proxies that support HTTPS are allowed.",
     "description": "Help text beside the upstream proxy settings indicating what type of upstream proxies can by used by Psiphon (different proxies are of different types and have different capabilities, and Psiphon has certain requirements)."
   },
-   "settings#upstream-proxy#username-label": {
-    "message": "Username",
-    "description": "Label for the text box where the user can set the username for the 'upstream proxy'."
-  },
-  "settings#upstream-proxy#password-label": {
-    "message": "Password",
-    "description": "Label for the text box where the user can set the password for the 'upstream proxy'."
-  },
   "settings#upstream-proxy#hostname-label": {
     "message": "Hostname",
     "description": "Label for the text box where the user can set the hostname for the 'upstream proxy'. 'Hostname' means approximately the same thing as 'server network name or identifier'."
@@ -283,17 +275,37 @@
     "message": "Port",
     "description": "Label for the text box where the user can set the network port number for the 'upstream proxy' that they would like to use."
   },
+  "settings#upstream-proxy#username-label": {
+    "message": "Username",
+    "description": "Label for the text box where the user can set the username for the 'upstream proxy'."
+  },
+  "settings#upstream-proxy#password-label": {
+    "message": "Password",
+    "description": "Label for the text box where the user can set the password for the 'upstream proxy'."
+  },
+  "settings#upstream-proxy#domain-label": {
+    "message": "Domain",
+    "description": "Label for the text box where the user can set the domain for the 'upstream proxy'."
+  },
   "settings#upstream-proxy#skip-label": {
     "message": "Don't use upstream proxy",
     "description": "Label for the checkbox that allows the user to override the default 'upstream proxy' usage and totally disable the feature."
   },
   "settings#upstream-proxy#set-username-password-error-msg": {
-    "message": "You must set both Username and Password, or leave both blank for proxies which do not require authentication.",
+    "message": "You must set both Username and Password, or leave both blank for no authentication.",
     "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
   },
   "settings#upstream-proxy#set-hostname-port-error-msg": {
     "message": "You must set both Hostname and Port, or leave both blank for automatic selection.",
     "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
+  },
+  "settings#upstream-proxy#set-hostname-port-without-authentication-error-msg": {
+    "message": "Setting a Username and Password also requires setting a Hostname and Port",
+    "description": "Error message that is shown if the user enters a value for 'Username' and 'Password' but doesn't set a 'Hostname' and 'Port' -- this is not valid, as both are required. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
+  },
+  "settings#upstream-proxy#set-domain-without-authentication-error-msg": {
+    "message": "Setting a Domain requires setting a Username and Password",
+    "description": "Error message that is shown if the user enters a value for 'Domain', but not 'Username' and 'Password' -- this is not valid, as domain authentication requires a Username and Password. Alternatively, the user can leave all fields blank to allow the automatic behaviour."
   },
   "settings#upstream-proxy#error-modal-title": {
     "message": "Upstream Proxy Error",
