--- a/src/webui/_locales/ko/messages.json
+++ b/src/webui/_locales/ko/messages.json
@@ -7,10 +7,6 @@
         "message": "<p>\n현재 Psiphon이 HTTP 프록시를 위해 특정한 로컬 포트를 사용하도록 설정되어 있습니다.<br>\n하지만, 해당 포트는 이미 사용되고 있는 것 같으며 Psiphon이 사용할 수 없습니다.\n</p>\n<p>\nHTTP 프록시 포트를 변경하고 다시 시도해 주세요. 값을 모두 지우면 Psiphon이 자동으로 사용 가능한 포트를 지정할 수 있으니 값을 지우는 방법을 추천합니다.\n</p>",
         "description": "Main text in the 'Local Proxy Port Conflict' dialog box. This is shown when the conflict is with the HTTP proxy port, rather than the SOCKS proxy port."
     },
-    "settings#upstream-proxy#set-both-error-msg": {
-        "message": "호스트 이름과 포트를 반드시 설정해야합니다, 또는 두 칸을 모두 빈칸으로 두면 자동으로 선택되도록 할 수 있습니다.",
-        "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
-    },
     "settings#egress-region#select-jp": {
         "message": "일본",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Japan will be used."
@@ -46,6 +42,10 @@
     "appbackend#state-connected-body": {
         "message": "국경을 넘어 탐색하세요!",
         "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. This is intended to be a reference to the 'Psiphon: Beyond Borders' tag line. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
+    },
+    "settings#disable-timeouts#enable-label": {
+        "message": "Disable timeouts for slow networks",
+        "description": "The label on the checkbox that enables 'Disable Timeouts' mode."
     },
     "settings#egress-region#select-in": {
         "message": "India",
@@ -90,6 +90,10 @@
     "feedback#success-message": {
         "message": "<strong>감사합니다!</strong> 당신의 피드백이 보내졌습니다.",
         "description": "Message shown to user after their feedback has been sent successufully"
+    },
+    "settings#upstream-proxy#password-label": {
+        "message": "Password",
+        "description": "Label for the text box where the user can set the password for the 'upstream proxy'."
     },
     "appbackend#state-stopped-title": {
         "message": "Psiphon 연결 끊김",
@@ -138,6 +142,10 @@
     "appbackend#state-starting-title": {
         "message": "Psiphon 연결 중",
         "description": "Appears in the notification area balloon when Psiphon is in the process of connecting to a server"
+    },
+    "settings#egress-region#select-es": {
+        "message": "Spain",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Spain will be used."
     },
     "settings#unapplied-changes-prompt#title": {
         "message": "설정 변경됨",
@@ -247,6 +255,10 @@
         "message": "설정 값에 오류가 있습니다. 진행하기 전에 설정을 확인하세요.",
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
     },
+    "settings#disable-timeouts#help-text": {
+        "message": "If enabled, communication with the Psiphon server will not time out",
+        "description": "Text explaining to the user what the 'Disable Timeouts' setting does if enabled."
+    },
     "nav#connection#stopped": {
         "message": "연결 끊김",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Connection' view, that has the connect button. This particular text is shown when Psiphon is disconnected."
@@ -302,6 +314,10 @@
     "connection#stopped-msg": {
         "message": "Psiphon <span class=\"state-word\">연결 끊김</span>",
         "description": "Message in the big connection status box telling the user that Psiphon is currently not connected to the network."
+    },
+    "settings#disable-timeouts#reason": {
+        "message": "When enabling this over a very slow network connection, you are less likely to experience unexpected disconnections.",
+        "description": "Help text in the 'Disable Timeouts' settings section explaining to the user why they might want to modify (enable) the setting."
     },
     "nav#about": {
         "message": "About",
@@ -367,6 +383,10 @@
         "message": "HTTPS를 지원하는 HTTP 프록시만 사용할 수 있습니다.",
         "description": "Help text beside the upstream proxy settings indicating what type of upstream proxies can by used by Psiphon (different proxies are of different types and have different capabilities, and Psiphon has certain requirements)."
     },
+    "settings#upstream-proxy#set-username-password-error-msg": {
+        "message": "You must set both Username and Password, or leave both blank for proxies which do not require authentication.",
+        "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
+    },
     "settings#transport-mode#check-label": {
         "message": "L2TP / IPSec 모드를 사용",
         "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended. 'L2TP/IPSec' is the technical name for a type of virtual private network and should probably not be translated."
@@ -403,6 +423,10 @@
         "message": "Psiphon 서버 위치",
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
     },
+    "settings#disable-timeouts#heading": {
+        "message": "Disable Timeouts for Slow Networks",
+        "description": "Settings section heading. If the user clicks this, the 'Disable Timeouts for Slow Networks' section will expand and can be edited. If 'disable timeouts' is enabled, network timeouts between the Psiphon client and server will be disabled."
+    },
     "settings#upstream-proxy#by-default": {
         "message": "컴퓨터가 이미 프록시 설정이 되어있는 경우, 기본적으로 Psiphon은 터널링을 하기 위해 해당 프록시를 이용합니다. “upstream proxy”를 사용하지 않는 것으로 지정하거나 사용할 프록시를 지정하면 이 동작을 덮어쓸 수 있습니다.",
         "description": "Help text indicating the default (and best) configuration and behavior for the 'Upstream Proxy' setting. It also indicates what will happen if the setting is overridden or disabled."
@@ -431,9 +455,17 @@
         "message": "국경을 넘어",
         "description": "The application/product/tool tagline/slogan/motto part of the fancy title at the top of the 'About' page. 'Beyond Borders' is the slogan that is also used on the Psiphon website -- it is meant to suggest that Psiphon can help users to get to the internet beyond the border (firewall) of the country they live in."
     },
+    "settings#upstream-proxy#username-label": {
+        "message": "Username",
+        "description": "Label for the text box where the user can set the username for the 'upstream proxy'."
+    },
     "connection#wait-btn": {
         "message": "잠시만 기다려주세요...",
         "description": "Text on the big connection button telling the user to wait while Psiphon tries to disconnect from the network. When this message is shown, the button is disabled."
+    },
+    "settings#upstream-proxy#set-hostname-port-error-msg": {
+        "message": "You must set both Hostname and Port, or leave both blank for automatic selection.",
+        "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
     },
     "settings#transport-mode#help-text": {
         "message": "Windows L2TP/IPSec 가상 네트워킹을 사용합니다. 이 모드는 모든 어플리케이션에 터널링을 적용합니다. 하지만 명료하지 않고 강력한 검열 우회 기능을 가지고 있지 않습니다. 대부분의 방화벽을 뚫는데에는 <strong>추천하지</strong> 않습니다.",
