--- a/src/webui/_locales/nb/messages.json
+++ b/src/webui/_locales/nb/messages.json
@@ -7,10 +7,6 @@
         "message": "<p>\nDu har satt opp Psiphon til å bruke en spesifikk port for dets HTTP-mellomtjener.<br>\nDog, den porten later til å allerede være i bruk, så Psiphon kan ikke bruke den.\n</p>\n<p>\nEndre den oppsatte HTTP-portverdien og prøv igjen. Det anbefales at du tømmer feltet slik at Psiphon automatisk kan velge en tilgjengelig port.\n</p>",
         "description": "Main text in the 'Local Proxy Port Conflict' dialog box. This is shown when the conflict is with the HTTP proxy port, rather than the SOCKS proxy port."
     },
-    "settings#upstream-proxy#set-both-error-msg": {
-        "message": "Du må oppgi både vertsnavn og port, eller la begge stå tomme for automatisk valg.",
-        "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
-    },
     "settings#egress-region#select-jp": {
         "message": "Japan",
         "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Japan will be used."
@@ -46,6 +42,10 @@
     "appbackend#state-connected-body": {
         "message": "Grenseløs utforskning!",
         "description": "Appears in the notification area balloon when Psiphon is currently connected to a server. Specifically, it appears when the connection has just completed. This is intended to be a reference to the 'Psiphon: Beyond Borders' tag line. Note for right-to-left languages: You should not use an exclamation mark, as it won't be displayed correct if shown on a left-to-right operating system."
+    },
+    "settings#disable-timeouts#enable-label": {
+        "message": "Disable timeouts for slow networks",
+        "description": "The label on the checkbox that enables 'Disable Timeouts' mode."
     },
     "settings#egress-region#select-in": {
         "message": "India",
@@ -90,6 +90,10 @@
     "feedback#success-message": {
         "message": "<strong>Takk!</strong> Din tilbakemelding har blitt sendt.",
         "description": "Message shown to user after their feedback has been sent successufully"
+    },
+    "settings#upstream-proxy#password-label": {
+        "message": "Password",
+        "description": "Label for the text box where the user can set the password for the 'upstream proxy'."
     },
     "appbackend#state-stopped-title": {
         "message": "Psiphon er frakoblet",
@@ -138,6 +142,10 @@
     "appbackend#state-starting-title": {
         "message": "Psiphon kobler til",
         "description": "Appears in the notification area balloon when Psiphon is in the process of connecting to a server"
+    },
+    "settings#egress-region#select-es": {
+        "message": "Spain",
+        "description": "One of the choices in the 'Psiphon Server Region' combo box. If selected, a Psiphon server in Spain will be used."
     },
     "settings#unapplied-changes-prompt#title": {
         "message": "Innstillinger endret",
@@ -247,6 +255,10 @@
         "message": "Det er feil i dine innstillingsverdier. Korriger dem før du fortsetter.",
         "description": "This modal dialog box is shown when the user tries to save their settings, but there is an error in the values they have entered. This body is the title of the modal box."
     },
+    "settings#disable-timeouts#help-text": {
+        "message": "If enabled, communication with the Psiphon server will not time out",
+        "description": "Text explaining to the user what the 'Disable Timeouts' setting does if enabled."
+    },
     "nav#connection#stopped": {
         "message": "Frakoblet",
         "description": "Text on the tab that, if the user clicks on it, switches to the 'Connection' view, that has the connect button. This particular text is shown when Psiphon is disconnected."
@@ -302,6 +314,10 @@
     "connection#stopped-msg": {
         "message": "Psiphon er <span class=\"state-word\">frakoblet</span>",
         "description": "Message in the big connection status box telling the user that Psiphon is currently not connected to the network."
+    },
+    "settings#disable-timeouts#reason": {
+        "message": "When enabling this over a very slow network connection, you are less likely to experience unexpected disconnections.",
+        "description": "Help text in the 'Disable Timeouts' settings section explaining to the user why they might want to modify (enable) the setting."
     },
     "nav#about": {
         "message": "Om",
@@ -367,6 +383,10 @@
         "message": "Bare HTTP-mellomtjenere som støtter HTTPS er tillatt.",
         "description": "Help text beside the upstream proxy settings indicating what type of upstream proxies can by used by Psiphon (different proxies are of different types and have different capabilities, and Psiphon has certain requirements)."
     },
+    "settings#upstream-proxy#set-username-password-error-msg": {
+        "message": "You must set both Username and Password, or leave both blank for proxies which do not require authentication.",
+        "description": "Error message that is shown if the user enters a value for one of 'Username' or 'Password', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to use an upstream proxy which doesn't require authentication."
+    },
     "settings#transport-mode#check-label": {
         "message": "Bruk L2TP/IPSec modus",
         "description": "Label for the checkbox that allows the user to indicate that they want to use the non-default network transport mode. This mode is generally inferior for circumvention and not recommended. 'L2TP/IPSec' is the technical name for a type of virtual private network and should probably not be translated."
@@ -403,6 +423,10 @@
         "message": "Region for Psiphon-tjener",
         "description": "Settings section heading. In this section the user can choose to use a Psiphon server in a specific country/region (or the default, which is just to choose the best/fastest region). "
     },
+    "settings#disable-timeouts#heading": {
+        "message": "Disable Timeouts for Slow Networks",
+        "description": "Settings section heading. If the user clicks this, the 'Disable Timeouts for Slow Networks' section will expand and can be edited. If 'disable timeouts' is enabled, network timeouts between the Psiphon client and server will be disabled."
+    },
     "settings#upstream-proxy#by-default": {
         "message": "Hvis din datamaskin allerede har en mellomtjener satt opp vil Psiphon som forvalg bruke den mellomtjeneren til etablering av en tunnel. Du kan overstyre den oppførselen ved å oppgi en mellomtjener, eller ved å oppgi at ingen slik \"oppstrømsmellomtjener\" skal brukes.",
         "description": "Help text indicating the default (and best) configuration and behavior for the 'Upstream Proxy' setting. It also indicates what will happen if the setting is overridden or disabled."
@@ -431,9 +455,17 @@
         "message": "Grenseløs",
         "description": "The application/product/tool tagline/slogan/motto part of the fancy title at the top of the 'About' page. 'Beyond Borders' is the slogan that is also used on the Psiphon website -- it is meant to suggest that Psiphon can help users to get to the internet beyond the border (firewall) of the country they live in."
     },
+    "settings#upstream-proxy#username-label": {
+        "message": "Username",
+        "description": "Label for the text box where the user can set the username for the 'upstream proxy'."
+    },
     "connection#wait-btn": {
         "message": "Vent…",
         "description": "Text on the big connection button telling the user to wait while Psiphon tries to disconnect from the network. When this message is shown, the button is disabled."
+    },
+    "settings#upstream-proxy#set-hostname-port-error-msg": {
+        "message": "You must set both Hostname and Port, or leave both blank for automatic selection.",
+        "description": "Error message that is shown if the user enters a value for one of 'Upstream Hostname' or 'Upstream Port', but not for both -- this is not valid, as both are required. Alternatively, the user can leave both blank to allow the automatic behaviour."
     },
     "settings#transport-mode#help-text": {
         "message": "Bruker Windows L2TP/IPSec virtuelt nettverk. Dette moduset vil sende alle dine programmer gjennom en tunnel, men legger ikke til et tilfeldig lag, så det har ikke sterke omgåelsesevner. Det er <strong>ikke anbefalt</strong> for forbigåelse av de fleste brannmurer.",
